# mimick

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_LICENSES_SUMMARY.txt  about.toml  build.rs  cargo-sources.json  dev.nicx.mimick.local.yml  dev.nicx.mimick.yml  sonar-project.properties
.cargo/: audit.toml
.github/: release-drafter.yml
.github/workflows/: build.yml  cargo-sources-guard.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  docs-links.yml  flatpak-repo.yml  flatpak.yml  release-drafter.yml  release.yml  scorecard.yml  semgrep.yml
scripts/: gen_test_assets.py  validate.sh
setup/: dev.nicx.mimick.desktop
setup/metainfo/: dev.nicx.mimick.metainfo.xml
site/: index.html  styles.css
site/fonts/: LICENSE.txt
src/: api_client.rs  app_context.rs  autostart.rs  cache_manager.rs  config.rs  diagnostics.rs  logging.rs  main.rs  media_kinds.rs  monitor.rs  profile.rs  queue_manager.rs  remote_sync.rs  runtime_env.rs  sanitize.rs  settings_window.rs  sidecar.rs  startup_scan.rs  state_manager.rs  sync_index.rs  tray_icon.rs  util.rs  watch_path_display.rs
src/api_client/: albums.rs  errors.rs  library.rs  mod.rs  search.rs  upload.rs  upload_helpers.rs
src/assets/: mimick.gresource.xml
src/settings_window/: actions_ui.rs  behavior.rs  connectivity.rs  galleries.rs  library.rs  mod.rs  queue_inspector.rs  status.rs  watch_folders.rs
tests/fixtures/: sample.avif  sample.dng  sample.heic  sample.jxl
wiki/: Architecture.md  Configuration-and-First-Run.md  Development.md  Home.md  Installation.md  Library-View-User-Guide.md  Repository-Automation.md  Screenshots.md  Testing.md  Troubleshooting.md
