[package]
name = "mimick"
version = "9.5.2"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
ashpd = { version = "0.13.10", features = ["background", "gtk4"] }
chrono = "0.4.44"
dirs = "6.0.0"
gdk4 = "0.11"
glib = "0.22.7"
gtk = { version = "0.11.2", package = "gtk4", features = ["v4_22"] }
ksni = "0.3.4"
libadwaita = { version = "0.9.1", features = ["v1_6"] }
log = "0.4.29"
lru = "0.18.0"
notify = "8.2.0"
oo7 = { version = "0.6.0", default-features = false, features = ["tokio", "native_crypto"] }
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "charset", "http2", "json", "multipart", "stream"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0" 
tokio = { version = "1.52.1", features = ["rt-multi-thread", "sync", "time", "fs", "macros", "io-util", "process"] }
flexi_logger = "0.31.8"
thumbhash = "0.1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
glib-build-tools = "0.22"

[profile.release]
opt-level = "z"        # Optimise for binary size (less code = less mapped pages)
codegen-units = 1      # Full whole-program optimisation
lto = true             # Link-Time Optimisation – dead code is stripped at link time
panic = "abort"        # Remove panic unwinding machinery (~60-100 KB of runtime)
strip = true           # Strip debug symbols from the final binary
